Fixed firefox bug with weird wrapping of raw button in ratio display

--- a/www/css/button.css
+++ b/www/css/button.css
@@ -13,7 +13,7 @@ button, .button {
     cursor: pointer;
     -webkit-transition-duration: 0.4s; /* Safari */
     transition-duration: 0.4s;
-    white-space: nowrap;
+    white-space: normal;
 }
 
 button:hover, .button:hover {
